[package]
name = "monsoon-hvpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
itertools = "0.12.1"
log = "0.4.21"
rusb = "0.9.3"
test-log = "0.2.15"
